--- a/src/styles/toolkit.sass
+++ b/src/styles/toolkit.sass
@@ -30,6 +30,7 @@ $w-md-tank: 86%
 $w-sm-tank: 90%
 
 /* =============================== Breakpoints =============================== */
+$bp-desktop-sm: 1450px
 $bp-tablet: 1024px
 $bp-mobile: 600px
 
